After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696766 - Fix deprecation warnings
Fix deprecation warnings
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Printers
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: Marek Kašík
Control-Center Maintainers
3.10
Depends on:
Blocks:
 
 
Reported: 2013-03-28 11:15 UTC by Marek Kašík
Modified: 2013-05-15 11:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
don't show CUPS deprecation warnings (1.48 KB, patch)
2013-03-28 11:19 UTC, Marek Kašík
committed Details | Review
replace deprecated function (1.21 KB, patch)
2013-03-28 11:19 UTC, Marek Kašík
committed Details | Review

Description Marek Kašík 2013-03-28 11:15:49 UTC
There are several deprecation warnings when compiling gnome-ontrol-center's Printers panel. These are caused by deprecation of CUPS' PPD API and by deprecation of gtk_scrolled_window_add_with_viewport().

Unfortunately the PPD API does not have full replacement available yet. Following patch hides the warnings by definition of _PPD_DEPRECATED="". I'll watch this problem closely since it affects more packages.

The deprecation of gtk_scrolled_window_add_with_viewport() is easily solvable by using gtk_container_add().

Following patches implements these proposals.

Marek
Comment 1 Marek Kašík 2013-03-28 11:19:30 UTC
Created attachment 240025 [details] [review]
don't show CUPS deprecation warnings
Comment 2 Marek Kašík 2013-03-28 11:19:48 UTC
Created attachment 240026 [details] [review]
replace deprecated function
Comment 3 Bastien Nocera 2013-05-13 15:21:07 UTC
Review of attachment 240025 [details] [review]:

Looks good.
Comment 4 Bastien Nocera 2013-05-13 15:21:57 UTC
Review of attachment 240026 [details] [review]:

Looks good.
Comment 5 Marek Kašík 2013-05-15 11:14:55 UTC
Thank you for the reviews. I've committed those patches to 3.8 and master.