printers: Replace deprecated function

Use gtk_container_add() instead of deprecated
gtk_scrolled_window_add_with_viewport().

https://bugzilla.gnome.org/show_bug.cgi?id=696766